--- a/README.rdoc
+++ b/README.rdoc
@@ -1,39 +1,49 @@
-Authentasaurus
-==============
+== Authentasaurus
 
 Authentasaurus is a generator plugin that generates a stub for restful
 authentication controllers, models, tests, routes and migrations.
 
-Authentasaurus is also a group/permission plugin, you can define permissions per
+Authentasaurus is also a group/permission authorization system, you can define permissions per
 controller action for each group of users.
 
-
-HOWTO User
-==========
+== Installation
 
 To start using Authentasaurus follow these simple steps :
 
-1. copy authentasaurus folder to your project vendor/plugins folder.
-2. run script/generator authentausaurus UserModelName in your project's
-   root directory. (replace UserModelName with the desired name for the main
-   user model --usually called user--)
-3. If you set up a UserModelName other than the default (user) add the following
-   option in the session controller (inside app/controllers) require_login
-   method, :model => UserModel
+1. install authentasaurus by running the following command in your app root
+    script/plugin install git://github.com/cousine/Authentasaurus.git
+2. to generate the necessary models, controllers and views run
+    script/generate authentausaurus UserModelName 
+   replace UserModelName with the desired name for the main user model --usually called user--
+   the generated user model contains the necessary fields for authentasaurus, feel free to customize it.
+3. run the migrations to create the necessary tables
+4. run "rake authentasaurus:load_defaults" to create the default groups and admin user
+5. if you installed authentasaurus without --skip-validation setup your email
+   settings in config/environment.rb
 
-   e.g.: created a UserModel called masher
-    require_login :model=> Masher, :actions => :destroy, :skip_request => true
+that's it you can now test your application by running script/server in your
+project root directory and going to http://localhost:3000/login
 
-4. Run "rake authentasaurus:load_defaults" to create the default groups and admin user
-5. setup session store and create session migrations
-6. customize your user model and run your migrations
-7. if you installed authentasaurus without --skip-validation setup your email
-   settings in config/enviroment.rb
-8. thats it you can now test your application by running script/server in your
-   project root directory and going to http://localhost:3000/login
+== Under the hood
 
-Generator options
-=================
+Authentasaurus takes advantage of rails' before_filter; it checks for the appropriate permissions before 
+every action that requires a login, a write or read permission.
+
+Authentasaurus uses the following terms: Area, Group and Permission
+
+An area is in plain english the controller's name, so if you have a controller named "PostsController", the corresponding
+area name would be "posts" (just as you type it in the generator command)
+
+A group is as the name suggests, each group contains a number of users, and each user inherits the group permissions,
+also note that at any given time, the user can only belong to one group
+
+A permission is one of two, either read or write, but take care, read or write is only a naming, and though it doesn't make
+sense, you could treat a read permission as a write permission and vice versa, but as i said it makes no sense !
+
+At login, authentasaurus would load the user's group permissions into his/her session and then attempts to read that hash
+when it meats a require helper on a controller.
+
+== Generator options
 
 You can use some options with the Authentasaurus generator; currently only one
 is available:
@@ -41,15 +51,14 @@ is available:
 --skip-validation
     { Skips generating the validation files used to send activation emails }
 
-Session/Permissions Helpers
-===========================
+== Session/Permissions Helpers
 
 There are three main session helpers in Authentasaurus:
 
 require_login: requires the user to login before accessing the actions specified
 
     ex: Tells Authentasaurus that the action destroy requires login and that
-        Authentasaurus shouldnt store the request in the session
+        Authentasaurus shouldn't store the request in the session
         (typically for logout actions)
 
         :model - Specifies the model that controls user information.
