tweaks for the readme

--- a/README.rdoc
+++ b/README.rdoc
@@ -55,7 +55,7 @@ is available:
 
 There are three main session helpers in Authentasaurus:
 
-<tt>require_login:</tt>::
+<tt>require_login</tt>::
 requires the user to login before accessing the actions specified
 
 ex: Tells Authentasaurus that the action destroy requires login and that
@@ -70,7 +70,7 @@ Authentasaurus shouldn't store the request in the session
 
      require_login :model=> Masher, :actions => :destroy, :skip_request => true
 
-<tt>require_write:</tt>::
+<tt>require_write</tt>::
 requires the user to have a write permission to that area to access the actions specified
 
 ex: Tells Authentasaurus that the actions create_user and delete_user
@@ -91,7 +91,7 @@ tell Authentasaurus where to find it.
                    :login_message => "Busted, login first",
                    :actions => [:create_user, :delete_user]
 
-<tt>require_read:</tt>::
+<tt>require_read</tt>::
 requires the user to have a read permission to that area to access the actions specified
 
 ex: Tells Authentasaurus that the action show_user requires login and read
